# The_Instrument_2

./: .gitignore  CMakeLists.txt  CMakePresets.json  MelodyForgePro.jucer  MelodyForgePro.nsi  README.md  install.sh
.github/workflows/: build.yml  release.yml
Source/: AssetLibrary.cpp  AssetLibrary.h  FxChain.cpp  FxChain.h  JuceIncludes.h  LookAndFeel.cpp  LookAndFeel.h  MFPRConstants.h  MelodyGenerator.cpp  MelodyGenerator.h  MidiExporter.cpp  MidiExporter.h  ParticlesComponent.cpp  ParticlesComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SamplerSlotsComponent.cpp  SamplerSlotsComponent.h  SynthEngine.cpp  SynthEngine.h
scripts/: compress_assets.py  generate_assets.py  package_macos.sh  package_windows.ps1
scripts/macos/: build_pkg.sh
tests/: CMakeLists.txt  TestMain.cpp
